--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3305/employeedb
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.show-sql=true
+
 server.port=3030
 
 ### Multipart config
